@@ -85,7 +85,7 @@ class Creole10(object):
               <</macro-name-alone>>
                        
          """
-        self.any = Any()
+        #self.any = Any()
         self.macro = Macro('',('<<','>>'),[],func=macro_func)
         self.bodiedmacro = BodiedMacro('',('<<','>>'),[],func=macro_func)
         self.block_macro = BlockMacro('',('<<','>>'),[],func=macro_func)
@@ -102,7 +102,7 @@ class Creole10(object):
                                   space_char=wiki_links_space_char,class_func=wiki_links_class_func,
                                   path_func=wiki_links_path_func)
         self.img = Image('img',('{{','}}'),[],delimiter='|')
-        self.link = Link('',('[[',']]'),[self.url_link,self.interwiki_link,self.wiki_link,self.any])
+        self.link = Link('',('[[',']]'),[self.url_link,self.interwiki_link,self.wiki_link])
         self.strong = InlineElement('strong', '**',[])
         self.em = InlineElement('em', '//',[])
         if no_wiki_monospace:
